name: hsokoban
version: 0.0.1
cabal-version: >=1.10
build-type: Simple
data-files:
      images/*.png
      fonts/*.otf

executable hsokoban
  hs-source-dirs: .
  main-is: Main.hs
  default-language: Haskell2010
  build-depends:
      protolude
    , base
    , sdl2
    , sdl2-image
    , sdl2-ttf
    , linear
    , vector
    , containers
    , text
    , filepath
    , megaparsec
  other-modules:
      Paths_hsokoban
    , LevelReader
  autogen-modules:
    Paths_hsokoban
